# navin-contracts

./: IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  README.md  fix_mocks.py  package-lock.json
contracts/shipment/: Cargo.toml
contracts/shipment/docs/: ACCEPTANCE_CRITERIA_VERIFICATION.md  FRONTEND_VERIFICATION.md  SETTLEMENT_IMPLEMENTATION_SUMMARY.md  SETTLEMENT_STATE_MACHINE.md  TOKEN_COMPATIBILITY.md  TTL_HEALTH_SUMMARY.md  TTL_MAINTENANCE_PLAYBOOK.md  TTL_QUICK_REFERENCE.md
contracts/shipment/src/: budget_bench.rs  circuit_breaker.rs  config.rs  consistency.rs  e2e_test.rs  error_map.rs  errors.rs  event_topics.rs  events.rs  lib.rs  storage.rs  stress_test.rs  test.rs  test_auth.rs  test_auto_dispute.rs  test_consistency.rs  test_cross_contract_integration.rs  test_diagnostics.rs  test_event_fixtures.rs  test_finalization.rs  test_hash_emit_vectors.rs  test_iot_verification.rs  test_mixed_token_shipments.rs  test_panic_free_invariants.rs  test_pause.rs  test_performance.rs  test_require_auth_for_args.rs  test_rollback.rs  test_settlement.rs  test_settlement_machine.rs  test_settlement_transitions.rs  test_suspension.rs  test_symbol_validation.rs  test_token_compatibility.rs  test_ttl_health.rs  test_verification.rs  types.rs  validation.rs
contracts/shipment/test_snapshots/e2e_test/: test_debug_event_structure.1.json  test_e2e_cancel_refund_path_with_token_balances.1.json  test_e2e_deadline_expiry_auto_cancel_and_refund.1.json  test_e2e_happy_path_with_milestones_and_token_balances.1.json  test_e2e_partial_milestones_then_cancel_via_deadline.1.json  (+2 more)
(+382 files in other folders)
