[package]
name = "shipment"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[features]
testutils = []

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
navin-token = { path = "../token", features = ["testutils"] }
serde_json = "1.0"
sha2 = "0.10"
